# Liquid War 6 is a unique multiplayer wargame.
# Copyright (C)  2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015  Christian Mauduit <ufoot@ufoot.org>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
#
# Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
# Contact author        : ufoot@ufoot.org

pkgdata_DATA = \
backend.scm \
bench.scm \
clear.scm \
command.scm \
config.scm \
console.scm \
control.scm \
cursor.scm \
db.scm \
def.scm \
demo.scm \
display.scm \
game.scm \
help.scm \
io.scm \
liquidwar6.scm \
load.scm \
loader.scm \
local-game.scm \
log.scm \
loop.scm \
main.scm \
map.scm \
menu-connecting.scm \
menu-engine.scm \
menu-exit.scm \
menu-ingame.scm \
menu-join.scm \
menu-map.scm \
menu-map-browse.scm \
menu-options-audio.scm \
menu-options-rules.scm \
menu-options.scm \
menu-options-system.scm \
menu-options-time.scm \
menu-options-video.scm \
menu-player-detail.scm \
menu-players.scm \
menu-play.scm \
menu-root.scm \
menu-score.scm \
menu-wait.scm \
menu.scm \
mover.scm \
music.scm \
net.scm \
node.scm \
preview.scm \
quick-start.scm \
score.scm \
screenshot.scm \
server.scm \
sound.scm \
speed.scm \
splash.scm \
style.scm \
test-0-main.scm \
test-0-node-a.scm \
test-0-node-b.scm \
test-0-node-c.scm \
test-1-main.scm \
test-1-node-a.scm \
test-1-node-b.scm \
test-1-node-c.scm \
test-utils.scm \
wait.scm \
zoom.scm \
README

pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@LW6_VERSION_BASE@/script
EXTRA_DIST = $(pkgdata_DATA)

